--- a/Classwork_ANN_Task.ipynb
+++ b/Classwork_ANN_Task.ipynb
@@ -864,7 +864,7 @@
         "<br>\n",
         "$loss(y, \\hat{y}) + \\alpha\\sum_{i=1}^n |w_i|$\n",
         "\n",
-        "Additionaly, from the dataset take the price col as the target variable dataset y and remove the price col to form X dataset and"
+        "Additionally, from the dataset take the price col as the target variable dataset y and remove the price col to form X dataset."
       ]
     },
     {
